addede a cars section with card layout

--- a/index.html
+++ b/index.html
@@ -46,6 +46,73 @@
             </div>
         </nav>
     </header>
+    <!-- main -->
+
+    <main>
+        <!-- main heading -->
+        <h1 class="text-center my-5">Vintage Car for Hire</h1>
+        <!-- cars section -->
+        <section class="container mt-5" id="cars">
+            <h4>Car Listings</h4>
+            <div class="row">
+                <!-- first card -->
+                <div class="col-md ">
+                    <div class="card">
+                        <img class=" img_style " src="./image/black-vintage-car.jpg" alt="balck vintage car" class="card-img-top">
+                        <div class="card-body  text-center">
+                            <h6>Vintage Black Car</h6>
+                            <p class="card-text">Car type : sedan <br> Doors : 4</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- second card -->
+                <div class=" col-md ">
+                    <div class="card ">
+                        <img class=" img_style " src="./image/gree-vintage-car.jpg" alt="green vintage car" class="card-img-top">
+                        <div class="card-body  text-center">
+                            <h6>Vintage Green Car</h6>
+                            <p class="card-text">Car type : sedan <br> Doors : 2</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- third card -->
+                <div class="col-md">
+                    <div class="card">
+                        <img class=" img_style " src="./image/grey-vintage-car.jpg" alt="gray vintage car" class="card-img-top">
+                        <div class="card-body  text-center">
+                            <h6>Vintage Gray Car</h6>
+                            <p class="card-text">Car type : sedan <br> Doors : 4</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- fourth card -->
+                <div class="col-md">
+                    <div class="card ">
+                        <img class="img_style" src="./image/red-vintage-car.jpg" alt="redvintage car" class="card-img-top">
+                        <div class="card-body  text-center mt-4">
+                            <h6>Vintage RedCar</h6>
+                            <p class="card-text ">Car type : sedan <br> Doors : 4</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Enquiries section -->
+        <section class="mt-5" id="enquiries">
+            <h4>Enquire about a car</h4>
+        </section>
+        <!-- Contact section -->
+        <section class="mt-5" id="contact">
+
+            <h4>Contact</h4>
+        </section>
+
+
+
+
+    </main>
 
 
 
@@ -60,17 +127,9 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-    <footer><a href="#top">Back to top</a>
+    <footer class="text-center">
+        <p> &copy; copyright Generation programme 2021 </p>
+        <a href="#top">Back to top</a>
     </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
