changed the background color for form section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="card ">
                         <img class="img_style card-img-top" src="./image/red-vintage-car.jpg" alt="redvintage car">
                         <div class="card-body text-center">
-                            <h6>Vintage RedCar</h6>
+                            <h6>Vintage Red Car</h6>
                             <p class="card-text ">Car type : sedan <br> Doors : 4</p>
                         </div>
                     </div>
@@ -102,10 +102,10 @@
 
 
         <!-- Enquiries section -->
-        <section class=" container mt-5" id="enquiries">
+        <section class=" container mt-5 bg_color" id="enquiries">
             <h4>Enquire about a car</h4>
             <form>
-                <div class=" mb-3">
+                <div class="mb-3 ">
                     <label for="full_name" class="form-label">Full Name</label>
                     <input type="text" class="form-control" id="full_name" placeholder="fisrtname lastname">
                 </div>
@@ -136,26 +136,12 @@
         <section class=" container mt-5" id="contact">
 
             <h4>Contact</h4>
+
         </section>
-
         </div>
-
-
     </main>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- footer -->
     <footer class="text-center">
         <p> &copy; copyright Generation programme 2021 </p>
         <a href="#top">Back to top</a>
