--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body id="#top">
-    <header>
+    <header class="container">
         <!-- making a navabr using bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav top_right ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#car">Cars</a>
+                            <a class="nav-link" aria-current="page" href="#cars">Cars</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#enquiries">Enquiries</a>
@@ -145,7 +145,7 @@
                 <!-- google map -->
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.9352738597377!2d144.96467781507022!3d-37.814985041885855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642b5de831c79%3A0x1927def4ee116d63!2sMelbourne%20Town%20Hall!5e0!3m2!1sen!2sau!4v1621481302836!5m2!1sen!2sau"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </address>
 
         </section>
