--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body id="#top">
-    <header class="container">
+    <header>
         <!-- making a navabr using bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -52,7 +52,7 @@
         <!-- main heading -->
         <h1 class="text-center mt-5">Vintage Car for Hire</h1>
         <!-- cars section -->
-        <section class="container mt-5" id="cars">
+        <section class=" mt-5" id="cars">
             <h4>Car Listings</h4>
             <div class="row">
                 <!-- first card -->
@@ -102,7 +102,7 @@
 
 
         <!-- Enquiries section -->
-        <section class=" container mt-5 bg_color" id="enquiries">
+        <section class=" mt-5 bg_color" id="enquiries">
             <h4>Enquire about a car</h4>
             <form>
                 <div class="mb-3 ">
@@ -133,7 +133,7 @@
 
 
         <!-- Contact section -->
-        <section class=" container mt-5" id="contact">
+        <section class=" mt-5" id="contact">
 
             <h4>Contact</h4>
             <!-- for adreess -->
@@ -145,7 +145,7 @@
                 <!-- google map -->
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.9352738597377!2d144.96467781507022!3d-37.814985041885855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642b5de831c79%3A0x1927def4ee116d63!2sMelbourne%20Town%20Hall!5e0!3m2!1sen!2sau!4v1621481302836!5m2!1sen!2sau"
-                    style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    style="border:0;" loading="lazy"></iframe>
             </address>
 
         </section>
