--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body id="#top">
-    <header>
+    <header class="container">
         <!-- making a navabr using bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -50,16 +50,16 @@
 
     <main>
         <!-- main heading -->
-        <h1 class="text-center mt-5">Vintage Car for Hire</h1>
+        <h1 class="text-center mt-5 text-uppercase">Vintage Car for Hire</h1>
         <!-- cars section -->
-        <section class=" mt-5" id="cars">
+        <section class="container mt-5" id="cars">
             <h4>Car Listings</h4>
-            <div class="row">
+            <div class="row fw-light ">
                 <!-- first card -->
                 <div class="col-md ">
                     <div class="card">
                         <img class=" img_style card-img-top " src="./image/black-vintage-car.jpg" alt="balck vintage car">
-                        <div class="card-body  text-center">
+                        <div class="card-body text-center">
                             <h6>Vintage Black Car</h6>
                             <p class="card-text">Car type : sedan <br> Doors : 4</p>
                         </div>
@@ -102,7 +102,7 @@
 
 
         <!-- Enquiries section -->
-        <section class=" mt-5 bg_color" id="enquiries">
+        <section class="container mt-5 bg_color" id="enquiries">
             <h4>Enquire about a car</h4>
             <form>
                 <div class="mb-3 ">
@@ -133,15 +133,15 @@
 
 
         <!-- Contact section -->
-        <section class=" mt-5" id="contact">
+        <section class="container mt-5" id="contact">
 
             <h4>Contact</h4>
             <!-- for adreess -->
             <address>
+                Name:Vintage Car Company<br>
                 Address: 90-130 Swanston St, Melbourne VIC 3000<br>
-                Hours:Open ⋅ Closes 5PM<br>
                 Phone: (03) 9658 9658<br>
-                Email:example@gmail.com<br>
+                Email:example@gmail.com<br><br>
                 <!-- google map -->
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.9352738597377!2d144.96467781507022!3d-37.814985041885855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642b5de831c79%3A0x1927def4ee116d63!2sMelbourne%20Town%20Hall!5e0!3m2!1sen!2sau!4v1621481302836!5m2!1sen!2sau"
@@ -149,7 +149,6 @@
             </address>
 
         </section>
-        </div>
     </main>
 
     <!-- footer -->
