put the back to top link on bottom right corner

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
     </main>
 
     <!-- footer -->
-    <footer class="text-center">
+    <footer class="text-center position-relative">
         <p> copyright&copy; All rights reserved Generation programme 2021 </p>
-        <a href="#top">Back to top</a>
+        <a class="position-absolute bottom-0 end-0" href="#top">Back to top</a>
     </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
