fixed the back to top button

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="card-body  text-center">
                             <h6>Vintage Gray Car</h6>
                             <p class="card-text">Car type : sedan <br> Doors : 4</p>
-                        </div>
+                        </div> container
                     </div>
                 </div>
 
@@ -152,7 +152,7 @@
     </main>
 
     <!-- footer -->
-    <footer class="text-center position-relative">
+    <footer class="text-center position-relative container">
         <p> copyright&copy; All rights reserved Generation programme 2021 </p>
         <a class="position-absolute bottom-0 end-0" href="#top">Back to top</a>
     </footer>
