delete the container word showing in card

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="card-body  text-center">
                             <h6>Vintage Gray Car</h6>
                             <p class="card-text">Car type : sedan <br> Doors : 4</p>
-                        </div> container
+                        </div>
                     </div>
                 </div>
 
