added a registration form

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body id="#top">
-    <header class="container">
+    <header>
         <!-- making a navabr using bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -39,6 +39,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" target="new" href="./registration.html">partern with us</a>
                         </li>
 
                     </ul>
