add some more lable on form

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" target="new" href="./registration.html">partern with us</a>
+                            <a class="nav-link" target="new" href="./registration.html">Partern with us</a>
                         </li>
 
                     </ul>
