--- a/registration.html
+++ b/registration.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/registration.css">
-    <title>REgistration</title>
+    <title>Registration</title>
 </head>
 
 <body>
@@ -23,6 +23,13 @@
             <!-- email address -->
             <label for="email">Email Address :</label>
             <input type="email" id="email" name="Email" class="form_input" placeholder="Enter your email address">
+            <!--Phone -->
+            <label for="phone">Telephone No :</label>
+            <input type="tel" id="phone" name="Phone No" class="form_input" placeholder="Enter your phone number">
+            <!-- last name -->
+            <label for="userdob">Date of birth :</label>
+            <input type="date" id="userdob" name="DOB" class="form_input" placeholder="Enter your date of birth">
+
         </form>
     </section>
 
